<resources>
    <string name="app_name">Verbs</string>
    <string name="english_1">Quick search of English irregular verbs</string>
    <string name="english_2">Just type a verb</string>
    <string name="english_3">Tap on the word to see the transcription</string>
    <string name="russian_1">Быстрый поиск форм неправильных глаголов английского языка</string>
    <string name="russian_2">Просто начинайте вводить глагол на английском или русском</string>
    <string name="russian_3">Нажмите на слове, чтобы посмотреть транскрипцию</string>
    <string name="chn_3">按一个词来检查音标</string>
    <string name="chn_2">输入英语或俄语动词</string>
    <string name="chn_1">快速 搜索英语的动词不定式</string>
    <string name="transcription">[rid]</string>
    <string name="hint_verb">Verb/Глагол</string>
    <string name="sorryMessageRus">К сожалению, такого глагола не найдено.</string>
    <string name="descriptionMessageRus">Напишите нам если нашли ошибку или у вас есть предложение</string>
    <string name="sorryMessageEng">Unfortunately, there is no such verb.</string>
    <string name="descriptionMessageEng">Send us your suggestions and feedback</string>
    <string name="sorryMessageChn">很可惜 ，这个动词没找到</string>
    <string name="descriptionMessageChn">如果您找到了错误或者您有建议，请给我们发电子邮件</string>
    <string name="sendMail">Отправить сообщение</string>
    <string name="supportMail">example@example.com</string>
    <string name="subjectMail">Ошибка</string>
    <string name="android">Версия операционной системы:</string>
    <string name="subjectMail_notFound">Слово не найдено</string>
    <string name="not_found">Слово %s не найдено</string>
    <string name="send_us_mail">Напишите нам, если нашли ошибку или у вас есть предложение</string>
    <string name="action_change_language">Сменить язык</string>
    <string name="site"><u>itsengtime.ru</u></string>
    <string name="dima">Дима Зюзин</string>
    <string name="design">Дизайн</string>
    <string name="dima_mail"><u>mailbox@dzyuzin.com</u></string>
    <string name="dima_site"><u>dzyuzin.com</u></string>
    <string name="denis">Денис Новиков</string>
    <string name="develop">Android разработка</string>
    <string name="denis_mail"><u>denisnovikov94@gmail.com</u></string>
    <string name="http">http://</string>
</resources>
