<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/about_color"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_24_white_arrow_left"/>

        <ImageView
            android:id="@+id/change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_24_white_planet"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:gravity="center"
        android:text="@string/send_us_mail"
        android:textColor="@color/white"
        android:textSize="16sp"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/sendMail_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:src="@mipmap/ic_24_envelope"/>

    <TextView
        android:id="@+id/main_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="@string/site"
        android:textColor="@color/white"
        android:textSize="14dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/dima"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4dp"
        android:textSize="14sp"
        android:text="@string/design"
        android:textColor="@color/dot_unselected"/>

    <TextView
        android:id="@+id/send_mail_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="6dp"
        android:textSize="12sp"
        android:text="@string/dima_mail"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/site_des"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="12sp"
        android:text="@string/dima_site"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/denis"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="4dp"
        android:textSize="14sp"
        android:text="@string/develop"
        android:textColor="@color/dot_unselected"/>

    <TextView
        android:id="@+id/send_mail_dev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="6dp"
        android:textSize="12sp"
        android:text="@string/denis_mail"
        android:textColor="@color/white"/>

</LinearLayout>